[package]
name = "strahl"
version = "0.1.0"
authors = ["Fabian Wahlster <wahlster@ux3d.io>"]
edition = "2018"

[dependencies]
packed_simd = { version="*", features=["into_bits"]}
rayon = "*"
image = "*"
rand = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false